--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                                           <li>
                                             <a href="https://deepsearch.lokyshin.net" target="_blank">
                                               <i class="fa fa-search"></i> 
-                                              &nbsp;&nbsp;DeepSearch by Lokyshin
+                                              &nbsp;&nbsp;LKS DeepSearch
                                             </a>
                                           </li>
                                           <li>
                                                   <a href="https://ds.lokyshin.net" target="_blank">
                                                     <i class="fa fa-search"></i> 
-                                                    &nbsp;&nbsp;Quick Deep Search by Lokyshin
+                                                    &nbsp;&nbsp;Quick Deep Search
                                                   </a>
                                           </li>
                                           <li>
@@ -156,13 +156,13 @@
                                           <li>
                                             <a href="https://firefoxhome.lokyshin.net" target="_blank">
                                               <i class="fab fa-firefox-browser"></i> 
-                                              &nbsp;&nbsp;Firefox(CN) on Browser
+                                              &nbsp;&nbsp;Firefox(CN)
                                             </a>
                                           </li>
                                           <li>
                                             <a href="https://firefox.lokyshin.net" target="_blank">
                                               <i class="fab fa-firefox-browser"></i> 
-                                              &nbsp;&nbsp;Firefox(Global) on Browser
+                                              &nbsp;&nbsp;Firefox(Global)
                                             </a>
                                           </li>   
                                         </ul>
