--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                             </a>
                                           </li>  
                                           <li>
-                                            <a href="https://www.icloud.com/mail/" target="_blank">
+                                            <a href="https://exmail.qq.com/login" target="_blank">
                                               <i class="fa-solid fa-inbox"></i> 
                                               &nbsp;&nbsp;Lokyshin's Email
                                             </a>
